# TicketSystem

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: structure.md
scripts/: build.sh  run-test
src/: CMakeLists.txt  main.cpp  ticket_system.cpp
src/include/: ticket_system.h
src/include/container/: custom_key.h  types.h
src/include/container/stl/: list.h  map.h  unordered_map.h  vector.h
src/include/train/: train_system.h  train_type.h
src/include/user/: user_system.h  user_type.h
src/include/utils/: algorithm.h  exceptions.h  token_scanner.h  utility.h
src/storage/bpt/: bplus_tree.h
src/train/: train_system.cpp  train_type.cpp
src/user/: user_system.cpp  user_type.cpp
src/utils/: token_scanner.cpp  utility.cpp
src/utils/container/: pair.h  string.h  vector.h
test/src/: chinese_test.cpp  sort_test.cpp
test/src/function_test/: CMakeLists.txt  a.cpp  b.cpp  b.h
